# fpga-coprocessor

./: .gitignore  FPGA-Coprocessor.qpf  Makefile  README.md  compile_commands.json  coprocessor.ipregen.rpt  coprocessor.qsf  coprocessor.qws
api/: CMakeLists.txt
api/include/: api.h
api/src/: api.c
driver/: .pins_mapping.cfg  Makefile  coproc.h  driver  mod.c  pbus.c  spi.c
driver/overlays/: bcm2711-fpga-coprocessor.dtbo  bcm2711-fpga-coprocessor.dtso
src/: avalon_batch_block.vhd  avalon_serializer.vhd  binding_vendor.vhd  coprocessor.vhd  ord.coproc  sequencer.vhd  systolic.vhd  vhdl_ls.toml
src/intrinsics/: batch_block.vhd  domain_fifo.vhd  duplex_fifo.vhd  parser.vhd  pe.vhd  pe_fifo.vhd  pll.vhd  serializer.vhd  serv_req_info.txt  shift.vhd  sipo.vhd  spi.vhd  spi.vhd.bak  spi_vendor.qsys  spi_vendor.sopcinfo  types.vhd
src/intrinsics/spi_vendor/: spi_vendor.bsf  spi_vendor.cmp  spi_vendor.html  spi_vendor.xml  spi_vendor_bb.v  spi_vendor_generation.rpt  spi_vendor_inst.v  spi_vendor_inst.vhd
src/soft_cpu/: coproc_soft_cpu.qsys  coproc_soft_cpu.sopcinfo  niosv_cpu.qsys  niosv_cpu.sopcinfo  systolic_batch_block_hw.tcl  systolic_batch_block_hw.tcl~  systolic_serializer_hw.tcl  systolic_serializer_hw.tcl~
src/soft_cpu/.qsys_edit/: coproc_soft_cpu.xml  coproc_soft_cpu_schematic.nlv  coproc_soft_schematic.nlv  preferences.xml  (+1 more)
src/soft_cpu/software/firmware/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  MEM.hex  Makefile  cmake_install.cmake  compile_commands.json  coproc_firmware.elf  coproc_firmware.elf.objdump  firmware.h  main.c  spi_avalon.c  sys_io.c
src/soft_cpu/software/firmware/.cache/clangd/index/: firmware.h.3D640B4EEB483957.idx  main.c.47FA80EEC67CE3DA.idx  spi_avalon.c.A21047809332DC3C.idx  sys_io.c.A656ADB20C2B9D81.idx
src/soft_cpu/software/firmware/hal_bsp/: Makefile  cmake_install.cmake
src/tb/: batch_block_tb.vhd  coprocessor_tb.vhd  domain_fifo_tb.vhd  parser_tb.vhd  pe_fifo_tb.vhd  pe_tb.vhd  pll_tb.vhd  serializer_tb.vhd  shift_tb.vhd  sipo_tb.vhd  spi_tb.vhd  systolic_tb.vhd  tb.vhd
(+291 files in other folders)
